--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "save": "^2.4.0"
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "webpack": "^5.69.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
   }
 }
